# starling-beancount

./: .flake8  .gitignore  LICENSE  README.md  config.yml  config_template.yml  importer.py  pyproject.toml  requirements.txt  setup.cfg  star.py
.github/workflows/: publish.yml
starling_beancount/: extractor.py  importer.py  utils.py
